Add gRPC server to handle JSON requests
Related to #1

Add gRPC server, REST service, and MySQL database operations to handle JSON requests and insert data into MySQL table.

* **Cargo.toml**
  - Add `tonic`, `mysql`, and `prost` dependencies.

* **src/grpc_server.rs**
  - Implement gRPC server to handle incoming JSON requests using `tonic`.

* **src/rest_service.rs**
  - Implement REST service to receive JSON requests using `warp`.
  - Forward received JSON to the gRPC server.

* **src/db_operations.rs**
  - Implement MySQL database operations to insert data using `mysql` crate.
  - Define function to insert data into MySQL table.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/zlovtnik/bip-rest-client/issues/1?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ license = "MIT"
 leptos = { version = "0.7.4", features = ["csr"] }
 uuid = { version = "1.11.0", features = ["v4", "js"] }
 instant = { version = "0.1.13", features = [ "wasm-bindgen", "inaccurate" ] }
+tonic = "0.6"
+mysql = "22.1.0"
+prost = "0.9"
